# ChangeLog for net-irc/atheme-services
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/atheme-services/ChangeLog,v 1.48 2012/07/12 17:41:17 johu Exp $

  12 Jul 2012; Johannes Huber <johu@gentoo.org> atheme-services-6.0.11.ebuild:
  Stable for x86, wrt bug #426198

  12 Jul 2012; Agostino Sarubbo <ago@gentoo.org> atheme-services-6.0.11.ebuild:
  Stable for amd64, wrt bug #426198

  17 May 2012; Jeff Horelick <jdhore@gentoo.org> atheme-services-9999.ebuild:
  Update the EGIT_REPO_URI as atheme.org git has moved to GitHub.

  15 May 2012; Jeff Horelick <jdhore@gentoo.org>
  -files/atheme-services-6.0.9-cracklib-automagic.patch,
  -files/atheme-services-7.0.0-perl-build-fix.patch:
  Remove old, unused patches.

*atheme-services-6.0.11 (15 May 2012)
*atheme-services-7.0.2 (15 May 2012)

  15 May 2012; Jeff Horelick <jdhore@gentoo.org> +atheme-services-6.0.11.ebuild,
  +atheme-services-7.0.2.ebuild, -atheme-services-7.0.0.ebuild:
  Version bumps on the 6.0 (LTS) and 7.0 branches.

  13 May 2012; Jeff Horelick <jdhore@gentoo.org> atheme-services-9999.ebuild:
  Make the -9999 ebuild clone the submodules too to fix the build since
  modules/contrib/ was made a submodule.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> atheme-services-6.0.10.ebuild,
  atheme-services-7.0.0.ebuild, atheme-services-7.0.1.ebuild,
  atheme-services-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*atheme-services-7.0.1 (27 Apr 2012)

  27 Apr 2012; Jeff Horelick <jdhore@gentoo.org> +atheme-services-7.0.1.ebuild:
  Version bump to 7.0.1

*atheme-services-7.0.0 (20 Apr 2012)

  20 Apr 2012; Jeff Horelick <jdhore@gentoo.org> +atheme-services-7.0.0.ebuild,
  +files/atheme-services-7.0.0-perl-build-fix.patch,
  atheme-services-9999.ebuild:
  Version bump to 7.0.0 and fix a possible bug in the live ebuild.

  20 Apr 2012; Jeff Horelick <jdhore@gentoo.org>